# yolov8_trt_mvp

./: .gitignore  CMakeLists.txt  README.md
include/: preprocess_cuda.h  yolov8_trt.h
src/: main.cpp  preprocess_cuda.cu  yolov8_trt.cpp
